[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Mob.gd" type="Script" id=1]
[ext_resource path="res://textures/robocock.png" type="Texture" id=2]
[ext_resource path="res://objects/robocock.obj" type="ArrayMesh" id=3]
[ext_resource path="res://SFX/Magic_Sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Materials/hpbar.tres" type="Theme" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 2 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.49312, 0.529951, 1.09129 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.582536, 0.783122, 0.735546 )

[sub_resource type="CapsuleShape" id=4]
radius = 0.613949
height = 0.698863

[sub_resource type="SphereShape" id=5]
radius = 55.0

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.683653, 2.02883, 1.23481 )

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("Viewport")

[node name="Mob" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0, -2.04709, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 6 )

[node name="CollisionHead" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46594, 0.159801 )
shape = SubResource( 2 )

[node name="CollisionBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.131031, 0 )
shape = SubResource( 3 )

[node name="CollisionFeet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -1.11118, 0 )
shape = SubResource( 4 )

[node name="AimRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AimRange"]
shape = SubResource( 5 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42515, -1.23013 )

[node name="aimcast" type="RayCast" parent="Eyes"]
enabled = true
cast_to = Vector3( 0, -1, -55 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.19867 )
shape = SubResource( 7 )

[node name="SFHurt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 8.116

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 220, 30 )
transparent_bg = true
render_target_v_flip = true

[node name="HPBar" type="ProgressBar" parent="Viewport"]
margin_right = 208.0
margin_bottom = 25.0
theme = ExtResource( 5 )
max_value = 200.0
percent_visible = false

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.45089, 0 )
billboard = 1
texture = SubResource( 8 )

[connection signal="body_entered" from="AimRange" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="AimRange" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
